# Faraway2026Japan

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  index.html  package-lock.json  package.json  pyproject.toml  pytest.ini  railway.toml  render.yaml  requirements.txt  stitch.json  vite.config.js
.github/workflows/: ai-review.yml  ci.yml  publish-package.yml  render-deploy.yml  stale.yml
assets/: README.md
docs/: DEMO_SCRIPT.md  DEPLOY-LIVE.md  DESIGN.md  PROJECT.md  SUBMISSION.md  ws-schema.md
public/: sop.md
scripts/: capture_gif_frames.mjs  verify-live-stack.mjs
server/: main.py  models.py  simulation.py  static_routes.py
server/agents/: hydrology.py  risk_model.joblib
src/: App.jsx  index.css
src/components/: AnomalyStream.jsx  BogieAnalysisPanel.jsx  BogieScene.jsx  BogieWheelScene.jsx  BootContinueButton.jsx  BootLoader.jsx  ClimatePanel.jsx  ControlPanel.jsx  CorridorBriefing.jsx  CorridorCommandDock.jsx  CorridorMatrix.jsx  HeroStatusLine.jsx  LogEntry.jsx  MetricBar.jsx  OverviewOpsStrip.jsx  ScenarioMenu.jsx  SegmentHudGrid.jsx  Sidebar.jsx  StationMapModal.jsx  TopBar.jsx  TrackMap.jsx  TrackScene.jsx  WeatherToggle.jsx
src/content/: uiCopy.js
src/hooks/: useGuideCoach.js  useWebSocket.js
src/lib/: api.js  chartData.js  chartData.test.js  componentProps.test.js  config.js  config.test.js  corridorStatus.js  corridorStatus.test.js  guideLauncher.js  (+6 more)
tests/: conftest.py  test_api_inject.py  test_cors_health.py  test_guide.py  test_hydrology.py  test_live_stack_smoke.py  test_risk_model.py  test_static_serving.py
(+16 files in other folders)
